--- a/about.html
+++ b/about.html
@@ -15,14 +15,14 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>生活是用来享受的<br>
+    困难是用来兴邦的</p></blockquote>
 
     <p>Hey，我是<strong>CG</strong>，一只科研狗，目前在荷兰。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时喜欢看无脑电视剧。</p>
+    <p>工作、学习之余，我是一个健身爱好者，同时喜欢看无脑电视剧。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/jetgc">👉GitHub·CG</a> 。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/jetgc">👉GitHub·CG</a> 。感谢 baiying<a href="https://qiubaiying.github.io/"></a> 提供的模版</p>
 
     <p></p>
     
