--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ header-img: "img/post-bg-rwd.jpg"
         <li><a href="https://scholar.google.com/">Google scholar</a></li>
     </ul>
 </div>
-
+<div>Logo通过<a href="https://www.designevo.com/cn/logo-maker/" title="免费在线logo制作软件">DesignEvo</a>设计制作</div>
 <!-- English Version -->
 <!-- <div class="en post-container">
     <blockquote><p>Yet another iOS Developer. <br>
