--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@ description: "Hey, this is CG."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
-<!-- Language Selector -->
-<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+<-- Language Selector -->
+<-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
     <option value="1"> 英文 English </option>
 </select> -->
 
-<!-- Chinese Version -->
+<-- Chinese Version -->
 <div class="zh post-container">
 
     <!--copied from markdown -->
@@ -35,25 +35,24 @@ header-img: "img/post-bg-rwd.jpg"
     </ul>
 </div>
 <div>Logo通过<a href="https://www.designevo.com/cn/logo-maker/" title="免费在线logo制作软件">DesignEvo</a>设计制作</div>
-<!-- English Version -->
-<!-- <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
+<-- English Version -->
+<-- <div class="en post-container">
+    <blockquote><p>Enjoy life. <br>
+    Suffer problems.</p></blockquote>
 
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
+    <p>Hi, I am <strong>Chao</strong>，another English name <strong>Jet</strong>. Phd student in Nijmeng, Netherlands</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/jetgc">Github·BY</a>.</p>
+    <p>This is my personal webpage</p>
     
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
+    <p></p>
 
-    <h5>Talks</h5>
+    <h5>More about me</h5>
 
     <ul>
-    <li><a href="https://github.com">GitHub</a></li>
-    <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-    <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://jetgc.github.io">BY</a></li>
-    </ul>
+        <li><a href="https://github.com">GitHub</a></li>
+        <li><a href="https://researchgate.net">ResearchGate</a></li>
+        <li><a href="https://scholar.google.com/">Google scholar</a></li>
+    </ul>>
 </div> -->
 
 <!-- Handle Language Change -->
