--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@ description: "Hey, this is CG."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
-<-- Language Selector -->
-<-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
-</select> -->
+<!-- Language Selector -->
+<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+<option value="0" selected> 中文 Chinese </option>
+<option value="1"> 英文 English </option>
+</select> 
 
-<-- Chinese Version -->
+<!-- Chinese Version -->
 <div class="zh post-container">
 
     <!--copied from markdown -->
@@ -34,9 +34,8 @@ header-img: "img/post-bg-rwd.jpg"
         <li><a href="https://scholar.google.com/">Google scholar</a></li>
     </ul>
 </div>
-<div>Logo通过<a href="https://www.designevo.com/cn/logo-maker/" title="免费在线logo制作软件">DesignEvo</a>设计制作</div>
-<-- English Version -->
-<-- <div class="en post-container">
+<!-- English Version -->
+<div class="en post-container">
     <blockquote><p>Enjoy life. <br>
     Suffer problems.</p></blockquote>
 
@@ -53,7 +52,8 @@ header-img: "img/post-bg-rwd.jpg"
         <li><a href="https://researchgate.net">ResearchGate</a></li>
         <li><a href="https://scholar.google.com/">Google scholar</a></li>
     </ul>>
-</div> -->
+</div>
+<div>Logo from<a href="https://www.designevo.com/cn/logo-maker/" title="免费在线logo制作软件">DesignEvo</a></div>
 
 <!-- Handle Language Change -->
 <script type="text/javascript">
