--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>Enjoy life. <br>
     Suffer problems.</p></blockquote>
 
-    <p>Hi, I am <strong>Chao</strong>，another English name <strong>Jet</strong>. Phd student in Nijmeng, Netherlands</p>
+    <p>Hi, I am <strong>Chao</strong>，or <strong>Jet</strong>. Phd student in Nijmeng, Netherlands</p>
 
     <p>This is my personal webpage</p>
     
