--- a/about.html
+++ b/about.html
@@ -51,7 +51,14 @@ header-img: "img/post-bg-rwd.jpg"
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="https://researchgate.net">ResearchGate</a></li>
         <li><a href="https://scholar.google.com/">Google scholar</a></li>
-    </ul>>
+    </ul>
+</div>
+<div>
+    <h5>Personal hobbies</h5>
+    ![dance](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_dancing.png) 
+    ![hiking](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_hiking.png) 
+    ![read](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_reading.png) 
+    ![tourism](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_tourism.png)
 </div>
 <div>Logo from<a href="https://www.designevo.com/cn/logo-maker/" title="免费在线logo制作软件">DesignEvo</a></div>
 
