--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>生活是用来享受的<br>
     困难是用来兴邦的</p></blockquote>
 
-    <p>Hey，我是<strong>CG</strong>，一只科研狗，目前在荷兰。</p>
+    <p>Hey，我是<strong>Chāo</strong>，一只科研狗，目前在荷兰。</p>
 
     <p>工作、学习之余，我是一个健身爱好者，同时喜欢看无脑电视剧。</p>
 
@@ -39,7 +39,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>Enjoy life. <br>
     Suffer problems.</p></blockquote>
 
-    <p>Hi, I am <strong>Chao</strong>，or <strong>Jet</strong>. Phd student in Nijmeng, Netherlands</p>
+    <p>Hi, I am <strong>Chāo</strong>. Phd student in Nijmeng, Netherlands</p>
 
     <p>This is my personal webpage</p>
     
